--- a/project.env
+++ b/project.env
@@ -1,3 +1,14 @@
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DB=database
+
+PGUSER=username
+PGPASSWORD=password
+PGDATABASE=database
+
+PGHOST=postgresql_dbase
+PGPORT=5432
+
+FLYWAY_USER=username
+FLYWAY_PASSWORD=password
+FLYWAY_URL=jdbc:postgresql://postgresql_dbase:5432/database
