--- a/svelte-ui/package.json
+++ b/svelte-ui/package.json
@@ -8,11 +8,20 @@
 		"preview": "vite preview"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.2",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@tailwindcss/typography": "^0.5.10",
+		"autoprefixer": "^10.4.18",
+		"daisyui": "^4.7.2",
+		"postcss": "^8.4.35",
 		"svelte": "^5.0.0-next.1",
-		"vite": "^5.0.3"
+		"tailwindcss": "^3.4.1",
+		"vite": "^5.1.4"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"flowbite": "^2.3.0",
+		"swiper": "^11.0.7"
+	}
 }
