--- a/svelte-ui/package.json
+++ b/svelte-ui/package.json
@@ -1,27 +1,28 @@
 {
-	"name": "svelte-ui",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.10",
-		"autoprefixer": "^10.4.17",
-		"daisyui": "^4.7.2",
-		"postcss": "^8.4.35",
-		"svelte": "^5.0.0-next.1",
-		"tailwindcss": "^3.4.1",
-		"vite": "^5.0.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"flowbite": "^2.3.0",
-		"swiper": "^11.0.6"
-	}
+  "name": "svelte-ui",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@tailwindcss/typography": "^0.5.10",
+    "autoprefixer": "^10.4.17",
+    "daisyui": "^4.7.2",
+    "postcss": "^8.4.35",
+    "svelte": "^5.0.0-next.1",
+    "tailwindcss": "^3.4.1",
+    "vite": "^5.0.3"
+  },
+  "type": "module",
+  "dependencies": {
+    "@sveltejs/adapter-node": "^5.0.1",
+    "flowbite": "^2.3.0",
+    "swiper": "^11.0.6"
+  }
 }
