--- a/svelte-ui/package.json
+++ b/svelte-ui/package.json
@@ -15,6 +15,8 @@
     "autoprefixer": "^10.4.17",
     "daisyui": "^4.7.2",
     "postcss": "^8.4.35",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
     "svelte": "^5.0.0-next.1",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.3"
